[06/12/2024] - [0.15.0] - Updated Packages:

1. FEATURE: Message reception channels were included, in addition to improvements in documentation

[06/10/2024] - [0.1.0] - Updated Packages:

1. FEATURE: Initial Commit, basic structure to start the project.